# asset-tools

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  build.bat  build_clean.bat  build_debug.bat  build_fresh.bat  dev-blog-ideas.md  dev-decisions.md  dev-journal.md  dev-notes.md  docker-compose.yml  vcpkg.json
app/: CMakeLists.txt  Dockerfile
app/src/: InspectMode.cpp  InspectMode.h  ScanMode.cpp  ScanMode.h  ToolMode.h  ValidateMode.cpp  ValidateMode.h  main.cpp
app/src/config/: ConfigLoader.cpp  ConfigLoader.h  ConfigValidator.cpp  ConfigValidator.h  ToolConfig.h
app/src/modes/: InspectMode.cpp  InspectMode.h  ScanMode.cpp  ScanMode.h  ToolModeFactory.cpp  ToolModeFactory.h  ValidateMode.cpp  ValidateMode.h
assets/: README.md  invalid_assets.txt  valid_assets.txt
ci/: README.md  docker-compose.yml
configs/: audio.yaml  base.yaml  textures.yaml
configs/custom/: custom_base.yaml
core/: CMakeLists.txt
core/include/core/: Asset.h  AssetParser.h  AssetValidator.h  ExitCode.h  Logger.h  ParseResult.h  TextureAssetValidator.h  TextureSizeRule.h  ToolResult.h  ValidationResult.h  ValidationRule.h  Version.h
core/src/: AssetParser.cpp  AssetValidator.cpp  Logger.cpp  TextureAssetValidator.cpp  TextureSizeRule.cpp  Version.cpp
jenkins/: Dockerfile  Jenkinsfile  README.md
jenkins/jenkins-install/: README.md
scripts/: build.sh  build_clean.sh  build_debug.sh  build_fresh.sh  build_interactive.sh
tests/assets/: README.md  sample_model.fbx
